--- a/superstring/portal/templates/partials/helper.html
+++ b/superstring/portal/templates/partials/helper.html
@@ -1,3 +1,4 @@
 <div ng-include="'partials/navbar.html'"></div>
-<h2>Home</h2>
+<h2>Angular Develop Help</h2>
+<pre ng-bind="hello"></pre>
 <div ng-include="'partials/footer.html'"></div>
