--- a/superstring/portal/frontend/templates/index.html
+++ b/superstring/portal/frontend/templates/index.html
@@ -13,11 +13,11 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
-    <link type="text/css" rel="stylesheet" href="static/bower_components/sass-bootstrap/dist/css/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="/statics/bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link type="text/css" rel="stylesheet" href="/static/styles/main.css">
+    <link type="text/css" rel="stylesheet" href="/statics/styles/main.css">
     <!-- endbuild -->
     <!--[if lte IE 8]>
       <script>
@@ -52,27 +52,27 @@
     </script>
 
     <!--[if lt IE 9]>
-    <script src="/static/bower_components/es5-shim/es5-shim.js"></script>
-    <script src="/static/bower_components/json3/lib/json3.min.js"></script>
+    <script src="/statics/bower_components/es5-shim/es5-shim.js"></script>
+    <script src="/statics/bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
     <!-- build:js(app) static/scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/static/bower_components/jquery/jquery.js"></script>
-    <script src="/static/bower_components/angular/angular.js"></script>
-    <script src="/static/bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/static/bower_components/angular-resource/angular-resource.js"></script>
-    <script src="/static/bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="/static/bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="/static/bower_components/angular-route/angular-route.js"></script>
+    <script src="/statics/bower_components/jquery/jquery.js"></script>
+    <script src="/statics/bower_components/angular/angular.js"></script>
+    <script src="/statics/bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/statics/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/statics/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/statics/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/statics/bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) static/scripts/scripts.js -->
-    <script src="/static/scripts/app.js"></script>
-    <script src="/static/scripts/controllers/navbar.js"></script>
-    <script src="/static/scripts/controllers/home.js"></script>
-    <script src="/static/scripts/controllers/helper.js"></script>
+    <script src="/statics/scripts/app.js"></script>
+    <script src="/statics/scripts/controllers/navbar.js"></script>
+    <script src="/statics/scripts/controllers/home.js"></script>
+    <script src="/statics/scripts/controllers/helper.js"></script>
     <!-- endbuild -->
 </body>
 </html>
