--- a/superstring/portal/frontend/templates/index.html
+++ b/superstring/portal/frontend/templates/index.html
@@ -36,7 +36,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <div ng-include="'partials/navbar.html'"></div>
     <!-- Add your site or application content here -->
     <div class="container wrapper" ng-view=""></div>
 
