--- a/superstring/portal/frontend/templates/partials/home.html
+++ b/superstring/portal/frontend/templates/partials/home.html
@@ -1,3 +1,14 @@
-
-<h2>Home</h2>
-<div ng-include="'partials/footer.html'"></div>
+<div class="page page-cloumn-3" id="page-home">
+    <div class="side-menu-wrapper"></div>
+    <div class="main-wrapper">
+        <div class="panel">
+            <h2>标题一</h2>
+        </div>
+    </div>
+    <div class="side-window-wrapper">
+        <div class="panel">
+            <h2>标题二</h2>
+        </div>
+    </div>
+    <div class="clearfix"></div>
+</div>
