--- a/superstring/portal/frontend/static/styles/main.less
+++ b/superstring/portal/frontend/static/styles/main.less
@@ -1,3 +1,72 @@
-.test{
-  border: 1px solid #fff;
+
+@import "variables";
+@import "common";
+
+
+
+.header{
+  .nav-bar{
+    height: 30px;
+    background-color: @color_nav_bar;
+    .system-info{
+      float:left;
+      color:#ddd;
+      font-size:12px;
+      padding-top: 10px;
+    }
+    .login-info{
+      float: right;
+      color:#ddd;
+      font-size:12px;
+      padding-top: 10px;
+    }
+  }
+  .nav-menu{
+    height:@height_nav_menu;
+    background-color: @color_nav_menu;
+    .system-title{
+      color:#fff;
+      margin-right: 40px;
+    }
+  }
+
+  .nav-pills {
+    .nav-split-line{
+      float: left;
+      width: 1px;
+      background-color: @color_nav_menu_item_border;
+    }
+    li{
+      width: 82px;
+      &.menu_active{
+        background-color: @color_nav_menu_item_active;
+        -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+        -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+        box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+      }
+      a{
+        color:#fff;
+        border-radius: 0px;
+        display: block;
+        text-align: center;
+        padding: 13px 18px;
+        .text{
+          display: block;
+          font-size: 12px;
+          margin-top: 2px;
+        }
+        .fa{
+          display: block;
+          font-size:25px;
+        }
+        &:hover{
+          background-color: @color_nav_menu_item_active;
+        }
+      }
+    }
+  }
+
+  .menu-active{
+
+  }
 }
