--- a/superstring/portal/frontend/templates/index.html
+++ b/superstring/portal/frontend/templates/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
     <link type="text/css" rel="stylesheet" href="/statics/bower_components/sass-bootstrap/dist/css/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="/statics/bower_components/font-awesome/css/font-awesome.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
