--- a/superstring/portal/frontend/templates/partials/navbar.html
+++ b/superstring/portal/frontend/templates/partials/navbar.html
@@ -2,7 +2,7 @@
   <div class="nav-bar">
       <div class="container">
         <div class="system-info">Huacloud</div>
-        <div class="login-info">你好，管理员！[修改密码] [退出系统]</div>
+        <div class="login-info">你好，管理员！[<a href="/change">修改密码</a>] [<a href="/logout">退出系统</a>]</div>
       </div>
   </div>
   <div class="nav-menu">
