添加flask-restful提供api接口

--- a/superstring/portal/frontend/templates/partials/home.html
+++ b/superstring/portal/frontend/templates/partials/home.html
@@ -1,6 +1,12 @@
 <div class="page page-cloumn-3" id="page-home">
-    <div class="side-menu-wrapper"></div>
+    <div ng-include="'partials/side-menu.html'"></div>
     <div class="main-wrapper">
+        <div class="panel">
+            <h2>标题一</h2>
+        </div>
+        <div class="panel">
+            <h2>标题一</h2>
+        </div>
         <div class="panel">
             <h2>标题一</h2>
         </div>
