--- a/superstring/portal/frontend/static/styles/common.less
+++ b/superstring/portal/frontend/static/styles/common.less
@@ -33,6 +33,38 @@ body{
     background-color: @color_side_menu_wrapper;
     width: @cloumn3_width_side_menu;
     min-height: @min_height_mian_view;
+    .side-menu{
+      color:#fff;
+      list-style: none;
+      margin: 0px;
+      padding: 0px 15px 15px 20px;
+      li{
+        border-bottom: 1px solid rgb(90, 90, 90);
+        padding: 5px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        h2{
+          font-size:14px;
+          list-style: none;
+          font-weight: bold;
+          margin-top:5px;
+          margin-bottom: 5px;
+        }
+        ul{
+          margin: 0px;
+          padding: 0px;
+          position: relative;
+          li{
+            margin: 0px;
+            font-size:13px;
+            color:rgb(143, 144, 148);
+            display: inline-block;
+            border:none;
+            padding: 5px;
+          }
+        }
+      }
+    }
   }
   .main-wrapper{
     float: left;
@@ -53,7 +85,7 @@ body{
     width:100%;
     min-height: @min_height_panel;
     margin: 0 auto;
-    margin-top:5px;
+    margin-top:15px;
     padding-left: 20px;
     padding-right: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
