自动生成菜单栏

--- a/superstring/portal/frontend/static/styles/common.less
+++ b/superstring/portal/frontend/static/styles/common.less
@@ -57,10 +57,13 @@ body{
           li{
             margin: 0px;
             font-size:13px;
-            color:rgb(143, 144, 148);
+
             display: inline-block;
             border:none;
             padding: 5px;
+            a{
+              color:rgb(143, 144, 148);
+            }
           }
         }
       }
