--- a/superstring/portal/frontend/static/styles/main.css
+++ b/superstring/portal/frontend/static/styles/main.css
@@ -1,15 +1,153 @@
-.container{min-width:1020px}
-@media (min-width:1200px){.container{width:1020px}}@media (min-width:992px){.container{width:1020px}}body{background-color:#e6e6e6;font-family:"Microsoft YaHei",微软雅黑,"Microsoft JhengHei",华文细黑,STHeiti,MingLiu}
-.page{background-color:#f9fbf7;min-height:800px;margin-top:30px;position:relative;width:990px}.page .side-menu-wrapper{float:left;background-color:#2c2d2f;width:150px;min-height:800px}.page .side-menu-wrapper .side-menu{color:#fff;list-style:none;margin:0;padding:0 15px 15px 20px}.page .side-menu-wrapper .side-menu li{border-bottom:1px solid #5a5a5a;padding:5px;padding-top:20px;padding-bottom:20px}.page .side-menu-wrapper .side-menu li h2{font-size:14px;list-style:none;font-weight:bold;margin-top:5px;margin-bottom:5px}
-.page .side-menu-wrapper .side-menu li ul{margin:0;padding:0;position:relative}.page .side-menu-wrapper .side-menu li ul li{margin:0;font-size:13px;color:#8f9094;display:inline-block;border:none;padding:5px}
-.page .main-wrapper{float:left;padding:10px 20px 10px 20px;position:relative;width:619px}
-.page .side-window-wrapper{float:right;width:220px;min-height:800px;padding:10px 10px 10px 0}.page .side-window-wrapper .panel{padding:0 10px 0 10px}
-.page .panel{width:100%;min-height:100px;margin:0 auto;margin-top:15px;padding-left:20px;padding-right:20px;box-shadow:0 1px 3px rgba(0,0,0,0.3);-moz-box-shadow:0 1px 3px rgba(0,0,0,0.3);-webkit-box-shadow:0 1px 3px rgba(0,0,0,0.3)}.page .panel h2{font-size:16px;font-weight:bold;border-bottom:1px solid #eee;padding-bottom:10px}
-.header .nav-bar{height:30px;background-color:#2d2e30}.header .nav-bar .system-info{float:left;color:#ddd;font-size:12px;padding-top:10px}
-.header .nav-bar .login-info{float:right;color:#ddd;font-size:12px;padding-top:10px}
-.header .nav-menu{height:70px;background-color:#0190d4}.header .nav-menu .system-title{color:#fff;margin-right:40px}
-.header .nav-pills .nav-split-line{float:left;width:1px;background-color:#27a7e8}
-.header .nav-pills li{width:82px}.header .nav-pills li.menu_active{background-color:#006599;-webkit-box-shadow:inset 0 3px 8px rgba(0,0,0,0.125);-moz-box-shadow:inset 0 3px 8px rgba(0,0,0,0.125);box-shadow:inset 0 3px 8px rgba(0,0,0,0.125)}
-.header .nav-pills li a{color:#fff;border-radius:0;display:block;text-align:center;padding:13px 18px}.header .nav-pills li a .text{display:block;font-size:12px;margin-top:2px}
-.header .nav-pills li a .fa{display:block;font-size:25px}
-.header .nav-pills li a:hover{background-color:#006599}
+.container {
+  min-width: 1020px;
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1020px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 1020px;
+  }
+}
+body {
+  background-color: #e6e6e6;
+  font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",华文细黑,STHeiti,MingLiu;
+}
+.page {
+  background-color: #f9fbf7;
+  min-height: 800px;
+  margin-top: 30px;
+  position: relative;
+  width: 990px;
+}
+.page .side-menu-wrapper {
+  float: left;
+  background-color: #2c2d2f;
+  width: 150px;
+  min-height: 800px;
+}
+.page .side-menu-wrapper .side-menu {
+  color: #fff;
+  list-style: none;
+  margin: 0px;
+  padding: 0px 15px 15px 20px;
+}
+.page .side-menu-wrapper .side-menu li {
+  border-bottom: 1px solid #5a5a5a;
+  padding: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.page .side-menu-wrapper .side-menu li h2 {
+  font-size: 14px;
+  list-style: none;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.page .side-menu-wrapper .side-menu li ul {
+  margin: 0px;
+  padding: 0px;
+  position: relative;
+}
+.page .side-menu-wrapper .side-menu li ul li {
+  margin: 0px;
+  font-size: 13px;
+  display: inline-block;
+  border: none;
+  padding: 5px;
+}
+.page .side-menu-wrapper .side-menu li ul li a {
+  color: #8f9094;
+}
+.page .main-wrapper {
+  float: left;
+  padding: 10px 20px 10px 20px;
+  position: relative;
+  width: 619px;
+}
+.page .side-window-wrapper {
+  float: right;
+  width: 220px;
+  min-height: 800px;
+  padding: 10px 10px 10px 0px;
+}
+.page .side-window-wrapper .panel {
+  padding: 0px 10px 0px 10px;
+}
+.page .panel {
+  width: 100%;
+  min-height: 100px;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.page .panel h2 {
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid #eeeeee;
+  padding-bottom: 10px;
+}
+.header .nav-bar {
+  height: 30px;
+  background-color: #2d2e30;
+}
+.header .nav-bar .system-info {
+  float: left;
+  color: #ddd;
+  font-size: 12px;
+  padding-top: 10px;
+}
+.header .nav-bar .login-info {
+  float: right;
+  color: #ddd;
+  font-size: 12px;
+  padding-top: 10px;
+}
+.header .nav-menu {
+  height: 70px;
+  background-color: #0190d4;
+}
+.header .nav-menu .system-title {
+  color: #fff;
+  margin-right: 40px;
+}
+.header .nav-pills .nav-split-line {
+  float: left;
+  width: 1px;
+  background-color: #27a7e8;
+}
+.header .nav-pills li {
+  width: 82px;
+}
+.header .nav-pills li.menu_active {
+  background-color: #006599;
+  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+  -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+}
+.header .nav-pills li a {
+  color: #fff;
+  border-radius: 0px;
+  display: block;
+  text-align: center;
+  padding: 13px 18px;
+}
+.header .nav-pills li a .text {
+  display: block;
+  font-size: 12px;
+  margin-top: 2px;
+}
+.header .nav-pills li a .fa {
+  display: block;
+  font-size: 25px;
+}
+.header .nav-pills li a:hover {
+  background-color: #006599;
+}
