--- a/superstring/portal/frontend/static/styles/variables.less
+++ b/superstring/portal/frontend/static/styles/variables.less
@@ -5,7 +5,8 @@
 @color_nav_bar: #2D2E30;
 @color_body: #E6E6E6;
 
-@color_side_menu_wrapper: #2C2D2F;
+@color_side_menu_wrapper: #2D2E32;
+@color_side_menu_active: #242328;
 
 @height_nav_menu: 70px;
 
