--- a/superstring/portal/frontend/static/styles/main.css
+++ b/superstring/portal/frontend/static/styles/main.css
@@ -15,6 +15,9 @@ body {
   background-color: #e6e6e6;
   font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",华文细黑,STHeiti,MingLiu;
 }
+.btn-primary {
+  background-color: #27a7e8;
+}
 .page {
   background-color: #f9fbf7;
   min-height: 800px;
@@ -22,21 +25,26 @@ body {
   position: relative;
   width: 990px;
 }
+.page.page-cloumn-2 .main-wrapper {
+  width: 830px;
+}
 .page .side-menu-wrapper {
   float: left;
-  background-color: #2c2d2f;
+  background-color: #2d2e32;
   width: 150px;
-  min-height: 800px;
 }
 .page .side-menu-wrapper .side-menu {
   color: #fff;
   list-style: none;
   margin: 0px;
-  padding: 0px 15px 15px 20px;
+  padding: 0px;
+}
+.page .side-menu-wrapper .side-menu :hover {
+  background-color: #242328;
 }
 .page .side-menu-wrapper .side-menu li {
   border-bottom: 1px solid #5a5a5a;
-  padding: 5px;
+  padding: 15px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -68,6 +76,15 @@ body {
   position: relative;
   width: 619px;
 }
+.page .main-wrapper .wrapper .panel.span6 {
+  width: 49%;
+}
+.page .main-wrapper .wrapper .panel.span4 {
+  width: 34%;
+}
+.page .main-wrapper .wrapper .panel.span8 {
+  width: 65%;
+}
 .page .side-window-wrapper {
   float: right;
   width: 220px;
@@ -93,6 +110,54 @@ body {
   font-weight: bold;
   border-bottom: 1px solid #eeeeee;
   padding-bottom: 10px;
+}
+.page .panel .panel-wrapper {
+  padding: 10px 10px 10px 0px;
+}
+.table {
+  border: none;
+}
+.table thead tr {
+  background-color: #0190d4;
+  color: #ffffff;
+}
+.table thead tr th {
+  font-weight: normal;
+  border: none;
+}
+.table tbody tr .check_box {
+  color: #0190d4;
+}
+.table tbody tr td {
+  padding: 6px 10px;
+  font-size: 13px;
+  vertical-align: middle;
+  word-break: keep-all;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.table tbody tr td.td_checkbox {
+  border: none;
+}
+.table tbody tr td .fa {
+  color: #c4c5c7;
+  font-size: 20px;
+}
+#panel-demo-1 #demo-chart {
+  float: left;
+  width: 170px;
+  text-align: center;
+}
+#panel-demo-1 #demo-table {
+  float: left;
+  width: 320px;
+  margin-top: 10px;
+}
+#panel-demo-1 #demo-table .table {
+  width: 360px;
+}
+#panel-demo-1 #demo-table .table td {
+  max-width: 75px;
 }
 .header .nav-bar {
   height: 30px;
