--- a/superstring/portal/frontend/templates/index.html
+++ b/superstring/portal/frontend/templates/index.html
@@ -59,21 +59,24 @@
 
     <!-- build:js(app) static/scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/statics/bower_components/jquery/jquery.js"></script>
-    <script src="/statics/bower_components/angular/angular.js"></script>
-    <script src="/statics/bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/statics/bower_components/angular-resource/angular-resource.js"></script>
-    <script src="/statics/bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="/statics/bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="/statics/bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular-resource/angular-resource.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/angular-ui-chart/src/chart.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/jqplot/jquery.jqplot.js"></script>
+    <script type="text/javascript" src="/statics/bower_components/jqplot/plugins/jqplot.pieRenderer.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) static/scripts/scripts.js -->
-    <script src="/statics/scripts/app.js"></script>
-    <script src="/statics/scripts/controllers/navbar.js"></script>
-    <script src="/statics/scripts/controllers/home.js"></script>
-    <script src="/statics/scripts/controllers/helper.js"></script>
+    <script type="text/javascript" src="/statics/scripts/app.js"></script>
+    <script type="text/javascript" src="/statics/scripts/controllers/navbar.js"></script>
+    <script type="text/javascript" src="/statics/scripts/controllers/home.js"></script>
+    <script type="text/javascript" src="/statics/scripts/controllers/helper.js"></script>
     <!-- endbuild -->
 </body>
 </html>
