--- a/superstring/portal/frontend/templates/partials/helper.html
+++ b/superstring/portal/frontend/templates/partials/helper.html
@@ -1,3 +1,53 @@
-<h2>Angular Develop Help</h2>
-<pre ng-bind="hello"></pre>
-<div ng-include="'partials/footer.html'"></div>
+<div class="page page-cloumn-2" id="page-demo">
+    <div ng-include="'partials/side-menu.html'"></div>
+    <div class="main-wrapper">
+        <div class="wrapper">
+            <div class="panel span6 pull-left">
+                <h2>Tow Columns 6</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="panel span6 pull-right">
+                <h2>Tow Columns 6</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="wrapper">
+            <div class="panel span4 pull-left">
+                <h2>Tow Columns 4</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="panel span8 pull-right">
+                <h2>Tow Columns 8</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="wrapper">
+            <div class="panel span8 pull-left">
+                <h2>Tow Columns 8</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="panel span4 pull-right">
+                <h2>Tow Columns 4</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="wrapper">
+            <div class="panel span6 pull-left">
+                <h2>Tow Columns 6</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="panel span6 pull-right">
+                <h2>Tow Columns 6</h2>
+                <div class="panel-wrapper"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="panel">
+            <h2>Tow Columns</h2>
+            <div class="panel-wrapper"></div>
+        </div>
+    </div>
+</div>
