--- a/superstring/portal/frontend/templates/partials/side-menu.html
+++ b/superstring/portal/frontend/templates/partials/side-menu.html
@@ -4,7 +4,7 @@
     		<h2>{{ item.title }}</h2>
     		<ul>
     			<li ng-repeat="sub in item.menus">
-                    <a ng-href="sub.link">{{ sub.title }}</a>
+                    <a ng-href="{{ sub.link }}">{{ sub.title }}</a>
                 </li>
     		</ul>
     	</li>
