--- a/superstring/portal/frontend/templates/partials/helper.html
+++ b/superstring/portal/frontend/templates/partials/helper.html
@@ -1,6 +1,7 @@
 <div class="page page-cloumn-2" id="page-demo">
     <div ng-include="'partials/side-menu.html'"></div>
     <div class="main-wrapper">
+        <h1><i class="fa fa-wheelchair"></i>Layout Demo</h1>
         <div class="wrapper">
             <div class="panel span6 pull-left">
                 <h2>Tow Columns 6</h2>
@@ -49,5 +50,6 @@
             <h2>Tow Columns</h2>
             <div class="panel-wrapper"></div>
         </div>
+        <div class="clearfix"></div>
     </div>
 </div>
