--- a/superstring/portal/frontend/templates/partials/home.html
+++ b/superstring/portal/frontend/templates/partials/home.html
@@ -22,7 +22,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="td_checkbox"><span class="check_box fa fa-circle "></span></td>
+                                <td class="td_checkbox"><span class="check_box"></span></td>
                                 <td>Value1</td>
                                 <td>Value2</td>
                                 <td>Value3</td>
@@ -30,7 +30,7 @@
                                 <td>Value5 <i class="fa  fa-chevron-circle-right"></i></td>
                             </tr>
                             <tr>
-                                <td class="td_checkbox"><span class="check_box fa fa-circle-o"></span></td>
+                                <td class="td_checkbox"><span class="check_box "></span></td>
                                 <td>Value1</td>
                                 <td>Value2</td>
                                 <td>Value3</td>
@@ -38,7 +38,7 @@
                                 <td>Value5 <i class="fa fa-chevron-circle-right"></i></td>
                             </tr>
                             <tr>
-                                <td class="td_checkbox"><span class="check_box fa fa-circle-o"></span></td>
+                                <td class="td_checkbox"><span class="check_box"></span></td>
                                 <td>Value1</td>
                                 <td>Value2</td>
                                 <td>Value3</td>
@@ -46,7 +46,7 @@
                                 <td>Value5 <i class="fa fa-chevron-circle-right"></i></td>
                             </tr>
                             <tr>
-                                <td class="td_checkbox"><span class="check_box fa fa-circle-o"></span></td>
+                                <td class="td_checkbox"><span class="check_box"></span></td>
                                 <td>Value1</td>
                                 <td>Value2</td>
                                 <td>Value3</td>
@@ -54,7 +54,7 @@
                                 <td>Value5 <i class="fa fa-chevron-circle-right"></i></td>
                             </tr>
                             <tr>
-                                <td class="td_checkbox"><span class="check_box fa fa-circle-o"></span></td>
+                                <td class="td_checkbox"><span class="check_box"></span></td>
                                 <td>Value1</td>
                                 <td>Value2</td>
                                 <td>Value3</td>
