--- a/superstring/portal/templates/security/register_user.html
+++ b/superstring/portal/templates/security/register_user.html
@@ -1,3 +1,7 @@
+<!-- extend base layout -->
+{% extends "security/_base.html" %}
+
+{% block content %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
 <h1>用户注册</h1>
@@ -11,3 +15,4 @@
   {{ render_field(register_user_form.submit) }}
 </form>
 {% include "security/_menu.html" %}
+{% endblock %}
