--- a/superstring/portal/templates/security/reset_password.html
+++ b/superstring/portal/templates/security/reset_password.html
@@ -1,3 +1,7 @@
+<!-- extend base layout -->
+{% extends "security/_base.html" %}
+
+{% block content %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
 <h1>Reset password</h1>
@@ -8,3 +12,4 @@
   {{ render_field(reset_password_form.submit) }}
 </form>
 {% include "security/_menu.html" %}
+{% endblock %}
